--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -1,8 +1,8 @@
 {% extends 'knp_menu.html.twig' %}
 
 {% block list %}
+    {{ dump(list) }}
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
-    {{ dump(item) }}
         {% import _self as knp_menu %}
         <div class="navigation">        
             <nav class="container">
