--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -184,11 +184,11 @@
     </div>
 
   </header>
-
+{#
 {% container 'mainNav' %}
-{#Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu1.html.twig  #}
- <p>123</p>
+Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu1.html.twig  
 {% endcontainer %}
+#}
 
         {# Trending topics is array of first in a row keyword of three latest articles #}
         {% cache 'subMenu' { time:0 } %}
