--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -2,219 +2,209 @@
 
 {% block body %}
 
-	<main class="container">
+<main class="container">
 
 	{% if themeSetting('breakingNews_switch') %}
-		{% set brNews = true %}
-		{% set listLength = 21 %}
-	{% else %}	
-		{% set brNews = false %}
-		{% set listLength = 20 %}
+	{% set brNews = true %}
+	{% set listLength = 21 %}
+	{% else %}
+	{% set brNews = false %}
+	{% set listLength = 20 %}
 	{% endif %}
 	{% cache 'contentListTopNews' ~ listId ~ listLength { gen: contentList } %}
 	{% gimmelist item from contentListItems|limit(listLength) with {contentListName: "Top news"} %}
-    {% if loop.first %}
+	{% if loop.first %}
 
-		{% if brNews %}
-		{% include 'partials/breaking-news.html.twig' with { 'article': item.content } %}
+	{% if brNews %}
+	{% include 'partials/breaking-news.html.twig' with { 'article': item.content } %}
+	<div class="row">
+		<div class="col-md-9 col-sm-12 col-xs-12">
 			<div class="row">
-				<div class="col-md-9 col-sm-12 col-xs-12">
-					<div class="row">
-						<div class="col-12">	
-		{% else %}
-		<div class="row">
-			<div class="col-md-9 col-sm-12 col-xs-12">
-				<div class="row">
-					<div class="col-12">
-        				{% include 'partials/mainArticle.html.twig' with { 'article': item.content } %}
-        				<div class="articleGrid row">
-		{% endif %}        		
-
-	{% else %}
-
-		{% if brNews and (loop.index == 2) %}
-		{% include 'partials/mainArticle.html.twig' with { 'article': item.content } %}
-			<div class="articleGrid row">
-		{% else %}
-				{% if (item.values.position == 9) or (item.values.position == 18) %}
-						<div class="col-12">
-								{% include 'partials/mainArticle.html.twig' with { 'article' : item.content } %}
-						</div>
-				{% endif %}
-				{% if (item.values.position == 1) or (item.values.position == 2) or (item.values.position == 3) or (item.values.position == 6) or (item.values.position == 7) or (item.values.position == 8) or (item.values.position == 10) or (item.values.position == 11) or (item.values.position == 12) or (item.values.position == 15) or (item.values.position == 16) or (item.values.position == 17) or (item.values.position == 19) or (item.values.position == 20) or (item.values.position == 21) or (item.values.position == 24) or (item.values.position == 25) or (item.values.position == 26) %}
-				  {% include 'partials/articleGrid__item.html.twig' with { 'article' : item.content, 'class' : 'articleGrid__item--threeColumns col-4' } %}
-				{% endif %}
-				{% if (item.values.position == 4) or (item.values.position == 5) or (item.values.position == 13) or (item.values.position == 14) or (item.values.position == 22) or (item.values.position == 23)  %}
-	        {% include 'partials/articleGrid__item.html.twig' with { 'article' : item.content, 'class' : 'articleGrid__item--twoColumns col-6' } %}
-				{% endif %}
-		{% endif %}
-
-    {% endif %}
-    {% if loop.last %}
-    	</div>
-    {% endif %}
-	{% endgimmelist %}
-	{% endcache %}
-
-					</div>
-				</div>
-					<div class="row">
-			<div class="col-xs-12">
-				<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('politics') }}">Kochen &amp; Backen</a></h3>
-			</div>
-
-			<div class="articleGrid d-flex">
-
-				{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '/kochen-backen'}  %}
-					{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns col-md-3 col-sm-6 col-xs-12'} %}
-				{% endgimmelist %}
-			</div>
-
-		</div>
-
-		<div class="row">
-			<div class="col-xs-12">
-				<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('business') }}"> DIÄT </a></h3>
-			</div>
-
-			<div class="articleGrid">
-
-				{% gimmelist article from articles|start(0)|limit(3)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
-					{% if loop.index == 1 %}
-						{% include 'partials/mainArticleList.html.twig' with {'class' : 'col-md-6 col-sm-12 col-xs-12', 'image':'small', 'deck': 'none'} %}
+				<div class="col-12">
 					{% else %}
-						{% include 'partials/articleGrid__item.html.twig' with {'class' : 'col-md-3 col-sm-6 col-xs-12'} %}
-					{% endif %}
-				{% endgimmelist %}
+					<div class="row">
+						<div class="col-md-9 col-sm-12 col-xs-12">
+							<div class="row">
+								<div class="col-12">
+									{% include 'partials/mainArticle.html.twig' with { 'article': item.content } %}
+									<div class="articleGrid row">
+										{% endif %}
 
-			</div>
-		</div>
+										{% else %}
 
-		{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/gesundheit'}  %}
-
-		{% set rend1250 = "/public/img/article_img/1250x600.png" %}
-		{% gimmelist media from articleMedia|limit(1) with {'article': article} %}
-		{% set imgCaption = media.body %}
-  			{% if media.renditions is iterable %}
-    			{% for rendition in media.renditions %}
-      				{% if rendition.name == '1250x600' %}
-        				{% set rend1250 = path(rendition) %}
-      				{% endif %}
-    			{% endfor %}
-  			{% endif %}
-		{% endgimmelist %}
-
-		<div class="row">
-			<div class="gallery marginTop30 marginBottom30 col-12">
-				<figure class="gallery__image">
-					<a class="gallery__strip" href="{{ path('gesundheit') }}">Gesundheit</a>
-					<a href="{{ path(article) }}">
-						<img src="{{ rend1250 }}" alt="{{ imgCaption|striptags }}">
-					</a>
-				</figure>
-				<div class="gallery__text">
-					<h3 class="gallery__headline"><a href="{{ path(article) }}">{{ article.title }}</a></h3>
-					<p>{{ article.lead|striptags|safeTruncate(200,"...") }}</p>
-				</div>
-			</div>
-		</div>
-		{% endgimmelist %}
-
-		<div class="row">
-						<div class="col-12">
-												<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('sports') }}">Mode &amp; schoenheit</a></h3>
-											<div class="row">
-															<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
-																{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/mode-schoenheit'}  %}
-																		{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
-																{% endgimmelist %}
-															</div>
-															<div class="articleListSmall col-md-6 col-sm-6 col-xs-12">
-																{% gimmelist article from articles|start(1)|limit(3) with {'route': '/mode-schoenheit'}  %}
-																		{% include 'partials/articleListSmall__item.html.twig'  %}
-																{% endgimmelist %}
-															</div>
+										{% if brNews and (loop.index == 2) %}
+										{% include 'partials/mainArticle.html.twig' with { 'article': item.content } %}
+										<div class="articleGrid row">
+											{% else %}
+											{% if (item.values.position == 9) or (item.values.position == 18) %}
+											<div class="col-12">
+												{% include 'partials/mainArticle.html.twig' with { 'article' : item.content } %}
 											</div>
-						</div>
-		</div>
- <div class="row">
+											{% endif %}
+											{% if (item.values.position == 1) or (item.values.position == 2) or (item.values.position == 3) or (item.values.position == 6) or (item.values.position == 7) or (item.values.position == 8) or (item.values.position == 10) or (item.values.position == 11) or (item.values.position == 12) or (item.values.position == 15) or (item.values.position == 16) or (item.values.position == 17) or (item.values.position == 19) or (item.values.position == 20) or (item.values.position == 21) or (item.values.position == 24) or (item.values.position == 25) or (item.values.position == 26) %}
+											{% include 'partials/articleGrid__item.html.twig' with { 'article' : item.content, 'class' : 'articleGrid__item--threeColumns col-4' } %}
+											{% endif %}
+											{% if (item.values.position == 4) or (item.values.position == 5) or (item.values.position == 13) or (item.values.position == 14) or (item.values.position == 22) or (item.values.position == 23)  %}
+											{% include 'partials/articleGrid__item.html.twig' with { 'article' : item.content, 'class' : 'articleGrid__item--twoColumns col-6' } %}
+											{% endif %}
+											{% endif %}
 
-							<div class="col-12">
-											<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('spass-unterhaltung/spiele') }}">Spiele</a></h3>
-												<div class="row">
-																<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
-																	{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/spass-unterhaltung/spiele'}  %}
-																			{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
-																	{% endgimmelist %}
-																</div>
-																<div class="articleListSmall col-md-6 col-sm-6 col-xs-12">
-																	{% gimmelist article from articles|start(1)|limit(3)|order('publishedAt','desc') with {'route': '/spass-unterhaltung/spiele'}  %}
-																			{% include 'partials/articleListSmall__item.html.twig'  %}
-																	{% endgimmelist %}
-																</div>
-												</div>
-							</div>
- </div>
-			</div>
-
-			<div class="col-xs-12 col-sm-12 col-md-3">
-       								<div class="col-12">
-										<div class="leftCol__item">
-												<div class="articleListSmall articleListSmall--latestNews marginBottom30">
-														<h3 class="sectionHeading">Latest news</h3>
-														{% gimmelist article from articles|start(0)|limit(6)|order('publishedAt','desc')  %}
-													{% include 'partials/articleListSmall__item.html.twig'  %}
-											{% endgimmelist %}
-												</div>
+											{% endif %}
+											{% if loop.last %}
 										</div>
+										{% endif %}
+										{% endgimmelist %}
+										{% endcache %}
 
-										{% container 'frontLeftSidebar' %}
-										<div class="ad marginBottom30 hidden-xs">
-											<img src="{{ asset('theme/img/article_img/ad.png') }}">
-										</div>
-										{% endcontainer %}
-						
+									</div>
 								</div>
-				{% include 'elements/most.html.twig' with {'class' : 'marginBottom30'} %}
+								<div class="row">
+									<div class="col-xs-12">
+										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('politics') }}">Kochen &amp; Backen</a>
+										</h3>
+									</div>
 
-				<div class="subscribe subscribe--banner marginBottom30">
-					<h3 class="subscribe__headline">Subscribe</h3>
-					<a href="#" class="subscribe__image"><img src="{{ asset('theme/img/subscribe.png') }}" alt=""></a>
-					<p class="subscribe__text">Your subscription helps support independent investigative journalism</p>
-					<a href="#" class="button button--color">Subscribe</a>
-				</div>
+									<div class="articleGrid d-flex">
 
-				{% if themeSetting('sidebar_switch') %}
-					{% include 'partials/featured-author.html.twig'  %}
-				{% endif %}
+										{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '/kochen-backen'}  %}
+										{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns col-md-3 col-sm-6 col-xs-12'} %}
+										{% endgimmelist %}
+									</div>
 
-				{% container 'frontSidebar' %}
+								</div>
 
-				<div class="ad hidden-xs marginTop30 marginBottom30">
-					<img src="{{ asset('theme/img/article_img/ad.png') }}">
-				</div>
+								<div class="row">
+									<div class="col-xs-12">
+										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('business') }}"> DIÄT </a></h3>
+									</div>
 
-				<div class="marginTop30 marginBottom30">
-					{% include 'elements/facebook.html.twig' %}
-				</div>
+									<div class="articleGrid">
 
-				{% include 'elements/selectedComment.html.twig' with {'class' : 'marginTop30 marginBottom30'} %}
+										{% gimmelist article from articles|start(0)|limit(3)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
+										{% if loop.index == 1 %}
+										{% include 'partials/mainArticleList.html.twig' with {'class' : 'col-md-6 col-sm-12 col-xs-12', 'image':'small', 'deck': 'none'} %}
+										{% else %}
+										{% include 'partials/articleGrid__item.html.twig' with {'class' : 'col-md-3 col-sm-6 col-xs-12'} %}
+										{% endif %}
+										{% endgimmelist %}
 
-				{% endcontainer %}
+									</div>
+								</div>
 
-			</div>
+								{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/gesundheit'}  %}
 
-		</div>
+								{% set rend1250 = "/public/img/article_img/1250x600.png" %}
+								{% gimmelist media from articleMedia|limit(1) with {'article': article} %}
+								{% set imgCaption = media.body %}
+								{% if media.renditions is iterable %}
+								{% for rendition in media.renditions %}
+								{% if rendition.name == '1250x600' %}
+								{% set rend1250 = path(rendition) %}
+								{% endif %}
+								{% endfor %}
+								{% endif %}
+								{% endgimmelist %}
 
+								<div class="row">
+									<div class="gallery marginTop30 marginBottom30 col-12">
+										<figure class="gallery__image">
+											<a class="gallery__strip" href="{{ path('gesundheit') }}">Gesundheit</a>
+											<a href="{{ path(article) }}">
+												<img src="{{ rend1250 }}" alt="{{ imgCaption|striptags }}">
+											</a>
+										</figure>
+										<div class="gallery__text">
+											<h3 class="gallery__headline"><a href="{{ path(article) }}">{{ article.title }}</a></h3>
+											<p>{{ article.lead|striptags|safeTruncate(200,"...") }}</p>
+										</div>
+									</div>
+								</div>
+								{% endgimmelist %}
 
+								<div class="row">
+									<div class="col-12">
+										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('sports') }}">Mode &amp; schoenheit</a>
+										</h3>
+										<div class="row">
+											<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
+												{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/mode-schoenheit'}  %}
+												{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
+												{% endgimmelist %}
+											</div>
+											<div class="articleListSmall col-md-6 col-sm-6 col-xs-12">
+												{% gimmelist article from articles|start(1)|limit(3) with {'route': '/mode-schoenheit'}  %}
+												{% include 'partials/articleListSmall__item.html.twig'  %}
+												{% endgimmelist %}
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="row">
 
+									<div class="col-12">
+										<h3 class="sectionHeadingBold marginTop30"><a
+												href="{{ url('spass-unterhaltung/spiele') }}">Spiele</a></h3>
+										<div class="row">
+											<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
+												{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/spass-unterhaltung/spiele'}  %}
+												{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
+												{% endgimmelist %}
+											</div>
+											<div class="articleListSmall col-md-6 col-sm-6 col-xs-12">
+												{% gimmelist article from articles|start(1)|limit(3)|order('publishedAt','desc') with {'route': '/spass-unterhaltung/spiele'}  %}
+												{% include 'partials/articleListSmall__item.html.twig'  %}
+												{% endgimmelist %}
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 
+							<div class="col-xs-12 col-sm-12 col-md-3">
+								<div class="col-12">
+									<div class="leftCol__item">
+										<div class="articleListSmall articleListSmall--latestNews marginBottom30">
+											<h3 class="sectionHeading">Latest news</h3>
+											{% gimmelist article from articles|start(0)|limit(6)|order('publishedAt','desc')  %}
+											{% include 'partials/articleListSmall__item.html.twig'  %}
+											{% endgimmelist %}
+										</div>
+									</div>
 
+									{% container 'frontLeftSidebar' %}
+									<div class="ad marginBottom30 hidden-xs">
+										<img src="{{ asset('theme/img/article_img/ad.png') }}">
+									</div>
+									{% endcontainer %}
 
-	
+								</div>
+								{% include 'elements/most.html.twig' with {'class' : 'marginBottom30'} %}
 
+								<div class="subscribe subscribe--banner marginBottom30">
+									<h3 class="subscribe__headline">Subscribe</h3>
+									<a href="#" class="subscribe__image"><img src="{{ asset('theme/img/subscribe.png') }}" alt=""></a>
+									<p class="subscribe__text">Your subscription helps support independent investigative journalism</p>
+									<a href="#" class="button button--color">Subscribe</a>
+								</div>
 
+								{% if themeSetting('sidebar_switch') %}
+								{% include 'partials/featured-author.html.twig'  %}
+								{% endif %}
 
+								{% container 'frontSidebar' %}
 
-	</main>
-	{% endblock %}
+								<div class="ad hidden-xs marginTop30 marginBottom30">
+									<img src="{{ asset('theme/img/article_img/ad.png') }}">
+								</div>
+
+								<div class="marginTop30 marginBottom30">
+									{% include 'elements/facebook.html.twig' %}
+								</div>
+
+								{% include 'elements/selectedComment.html.twig' with {'class' : 'marginTop30 marginBottom30'} %}
+
+								{% endcontainer %}
+							</div>
+						</div>
+</main>
+{% endblock %}
