--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -4,7 +4,7 @@
         {% import _self as knp_menu %}
         <div class="navigation">        
             <nav class="container">
-            <div id="header">
+            <div id="header" class="navigation__header okayNav-header">
                     <nav>
                         <ul>
                     {{ block('children') }}
