--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -5,7 +5,7 @@
         <div class="navigation">        
             <nav class="container">
             <div id="header" class="navigation__header okayNav-header">
-                    <nav>
+                    <nav role="navigation" id="nav-main" class="okayNav">
                         <ul>
                     {{ block('children') }}
                         </ul>
