--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
+{% dump %}
 <main class="container">
 
 	{% if themeSetting('breakingNews_switch') %}
