--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -186,8 +186,8 @@
   </header>
 
 {% container 'mainNav' %}
-  <h1>testing the title</h1>
-{#Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu1.html.twig  #}
+{% dump %}
+  {#Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu1.html.twig  #}
 {% endcontainer %}
 
         {# Trending topics is array of first in a row keyword of three latest articles #}
