--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -2,7 +2,7 @@
 {% block list %}
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% import _self as knp_menu %}
-        {{ dump(options) }}
+        {{ dump(item) }}
         <div class="navigation">        
             <nav class="container">
             <div id="header" class="navigation__header okayNav-header">
