--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -1,6 +1,6 @@
 {% extends 'knp_menu.html.twig' %}
+{{ dump(item) }}
 {% block list %}
-<p>123</p>
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% import _self as knp_menu %}
         <div class="navigation">        
