--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -1,8 +1,5 @@
 {% extends 'knp_menu.html.twig' %}
-{% dump(item.children) %}
-{% block list %}
-  {{ block('children') }}
-{% endblock %}
+{# {% dump(item.children) %} #}
 {% block list %}
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% import _self as knp_menu %}
