--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -42,7 +42,7 @@
     +sm
       margin: 0px
     img
-      width: 100%
+      width: 100px
       max-width: 333px
     &--section
       max-width: 170px
