--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -152,7 +152,7 @@
 
       <div class="d-flex justify-content-between">
 
-        <div class="verticalMiddle col-2">
+        <div class="verticalMiddle col-2 p-0">
           <p class="header__weather row text-center justify-content-center">
             <span class="weather-temperature col-12"></span>
             <span class="header__weather__info col-12">
@@ -169,7 +169,7 @@
         </div>
         {% endblock %}
 
-        <div class="header__search verticalMiddle col-4">
+        <div class="header__search verticalMiddle col-4 p-0">
 
           <!--form id="search" name="search_articles" method="GET" action="/search">
             <input type="text" name="q" placeholder="search" value="">
