--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -35,7 +35,7 @@
 											{% else %}
 											{% if (item.values.position == 9) or (item.values.position == 18) %}
 											<div class="col-12">
-												{% include 'partials/mainArticle.html.twig' with { 'article' : item.content } %}
+												{% include 'partials/mainArticleList.html.twig' with { 'article' : item.content } %}
 											</div>
 											{% endif %}
 											{% if (item.values.position == 1) or (item.values.position == 2) or (item.values.position == 3) or (item.values.position == 6) or (item.values.position == 7) or (item.values.position == 8) or (item.values.position == 10) or (item.values.position == 11) or (item.values.position == 12) or (item.values.position == 15) or (item.values.position == 16) or (item.values.position == 17) or (item.values.position == 19) or (item.values.position == 20) or (item.values.position == 21) or (item.values.position == 24) or (item.values.position == 25) or (item.values.position == 26) %}
