--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -25,7 +25,7 @@
 						<div class="col-md-9 col-sm-12 col-xs-12">
 							<div class="row">
 								<div class="col-12">
-									{% include 'partials/mainArticle.html.twig' with { 'article': item.content } %}
+												{% include 'partials/mainArticleList.html.twig' with { 'article' : item.content } %}
 									<div class="articleGrid row">
 										{% endif %}
 										{% else %}
