--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -69,10 +69,10 @@
 									<div class="col-xs-12">
 										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('business') }}"> DIÄT </a></h3>
 									</div>
-									<div class="articleGrid">
+									<div class="articleGrid row">
 										{% gimmelist article from articles|start(0)|limit(3)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
 										{% if loop.index == 1 %}
-										{% include 'partials/mainArticleList.html.twig' with {'class' : 'col-md-6 col-sm-12 col-xs-12', 'image':'small', 'deck': 'none'} %}
+										{% include 'partials/mainArticleList.html.twig' with {'class' : 'col-12', 'image':'small', 'deck': 'none'} %}
 										{% else %}
 										{% include 'partials/articleGrid__item.html.twig' with {'class' : 'col-md-3 col-sm-6 col-xs-12'} %}
 										{% endif %}
