--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -29,7 +29,15 @@
   .mainArticle__text
     font-size: 1.6rem
     +sm
+      position: absolute;
+      left: 55px;
+      right: 35px;
+      bottom: 30px;
+      max-width: 690px;
+      text-shadow: 1px 1px 1px rgba(0,0,0,.8), -1px -1px 4px rgba(0,0,0,.8);
       max-width: 690px
+    a
+    color: #fff;
 
   .mainArticle__kicker
     font-family: $fontSansSerif
