--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -54,8 +54,13 @@
     @include letterSpacing()
     font-size: 3.4rem
     font-weight: 600
-    margin: 10px 0px
+    margin: 12px 0;
+    text-shadow: 1px 1px 1px #000;
+    a
+      color: #fff;
     &:hover
       color: $colorGrey
     &--small
       font-size: 3.2rem
+
+  
