--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -52,8 +52,9 @@
 
   .mainArticle__headline
     @include letterSpacing()
-    font-size: 3.4rem
-    font-weight: 600
+    font-size: 3.9rem
+    font-weight: 700
+    text-transform: uppercase
     margin: 12px 0;
     text-shadow: 1px 1px 1px #000;
     a
