--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <main class="container">
-
+{{ dump }}
 	{% if themeSetting('breakingNews_switch') %}
 	{% set brNews = true %}
 	{% set listLength = 21 %}
