--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -56,7 +56,7 @@
 								</div>
 								<div class="row">
 									<div class="col-xs-12">
-										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('politics') }}">Kochen &amp; Backen</a>
+										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('kochen-backen') }}">Kochen &amp; Backen</a>
 										</h3>
 									</div>
 									<div class="articleGrid d-flex">
