--- a/views/partials/mainArticle.html.twig
+++ b/views/partials/mainArticle.html.twig
@@ -44,7 +44,7 @@
               <h2 class="mainArticle__headline"><a href="{{ url(article) }}">{{ article.title }}</a></h2>
             
             <div class="mainArticle__teaser">
-              <p>{{ article.lead|striptags|safeTruncate(200,"...") }}</p>
+              <p>{{ article.featureMedia.body|striptags|safeTruncate(200,"...") }}</p>
             </div>
            {#
             <div class="articleMetadata">
