--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -186,6 +186,7 @@
   </header>
 
 {% container 'mainNav' %}
+{% dump %}
   {#Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu1.html.twig  #}
 {% endcontainer %}
 
