--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<main class="container">g
+<main class="container">
 	{% if themeSetting('breakingNews_switch') %}
 	{% set brNews = true %}
-	{% set listLength = 21 %}
+	{% set listLength = 27 %}
 	{% else %}
 	{% set brNews = false %}
-	{% set listLength = 20 %}
+	{% set listLength = 26 %}
 	{% endif %}
 	{% cache 'contentListTopNews' ~ listId ~ listLength { gen: contentList } %}
 	{% gimmelist item from contentListItems|limit(listLength) with {contentListName: "Top news"} %}
