--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -67,4 +67,6 @@
   .mainArticle__teaser
     p
       color: #fff;
+      text-shadow: 1px 1px 1px rgba(0,0,0,.8), -1px -1px 4px rgba(0,0,0,.8);
+      font-weight: 700
 
