--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -30,11 +30,11 @@
 
   <a href="{{ url(article) }}">
     {% if articleKicker %}<span class="articleGrid__kicker">{{ articleKicker }}</span>{% endif %}
-    <h3 class="articleGrid__headline">{{ article.title }}</h3>
+      <p class="articleGrid__text">
+      {{ article.featureMedia.body|striptags|upper|safeTruncate(160,"...") }}
+      </p>
+      <h3 class="articleGrid__headline">{{ article.title }}</h3>
   </a>
-  <p class="articleGrid__text">
-      {{ article.lead|striptags|safeTruncate(160,"...") }}
-  </p>
   <div class="articleMetadata">
     {# if article.authors %}
       {% for author in article.authors %}
