--- a/public/css/elements/articleGrid.sass
+++ b/public/css/elements/articleGrid.sass
@@ -18,6 +18,12 @@
       &:nth-child(2n + 1)
         @media only screen and (min-width: 768px) and (max-width: 991px)
           clear: left
+  .articleGrid_text
+      font-size: 1.4rem;
+      color: #ea545f;
+      text-transform: uppercase;
+      font-weight: 700;
+      line-height: 140%;
   .articleGrid__image
     position: relative
     display: block
