--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -35,17 +35,17 @@
       </p>
       <h3 class="articleGrid__headline">{{ article.title }}</h3>
   </a>
-  <div class="articleMetadata">
-    {# if article.authors %}
+ {# <div class="articleMetadata">
+     if article.authors %}
       {% for author in article.authors %}
       <span class="articleMetadata__byline">by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></span>
       {% endfor %}
     {% elseif article.metadata.byline %}
     <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
-    {% endif #}
+    {% endif 
     <a class="articleMetadata__shares articleMetadata__info" href="#">240</a>
     <a class="articleMetadata__comments articleMetadata__info" href="#">20</a>
-  </div>
+  </div>#}
 </article>
 
 {# endcache #}
