--- a/public/css/elements/articleGrid.sass
+++ b/public/css/elements/articleGrid.sass
@@ -18,7 +18,7 @@
       &:nth-child(2n + 1)
         @media only screen and (min-width: 768px) and (max-width: 991px)
           clear: left
-  .articleGrid_text
+  .articleGrid__text
       font-size: 1.4rem;
       color: #ea545f;
       text-transform: uppercase;
