--- a/public/css/elements/articleGrid.sass
+++ b/public/css/elements/articleGrid.sass
@@ -61,11 +61,13 @@
     font-size: 1.4rem
     color: #ea545f
     text-transform: uppercase
-    font-weight: 600
-    display: block
-    margin: 0px 0px 5px 0px
+    font-weight: 700
+    display: none
+    line-height: 140%;
+    margin-top: 0 0 2px;
     +sm
-      margin: 15px 0px 5px 0px
+      display: block;
+      margin: 10px 0 2px;
   .articleGrid__headline
     @include letterSpacing()
     font-size: 2.1rem
