--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -40,17 +40,13 @@
       color: #fff;
 
   .mainArticle__kicker
-    display: none;
     font-family: $fontSansSerif
     font-size: 1.4rem
     font-weight: 700
     color: #ea545f
+    display: block
     text-transform: uppercase
-    line-height: 140%;
-    margin-top: 0 0 2px;
-    @media only screen and (min-width: 768px)
-      display: block;
-      margin: 10px 0 2px;
+    margin-top: 10px
     &--section
       margin-top: 0px
 
