--- a/public/css/elements/articleGrid.sass
+++ b/public/css/elements/articleGrid.sass
@@ -70,9 +70,15 @@
       margin: 10px 0 2px;
   .articleGrid__headline
     @include letterSpacing()
-    font-size: 2.1rem
-    font-weight: 700
-    margin: 5px 0px 10px 0px
-    transition: 0.2s color
+    letter-spacing: .2px;
+    font-size: 1.9rem;
+    font-weight: 600;
+    margin: 0 0 0 120px;
+    -webkit-transition: .2s color;
+    transition: .2s color;
+    +sm
+      margin-top: 10px;
+      margin-left: 0;
     &:hover
       color: $colorGrey
+
