--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -15,12 +15,12 @@
 	{% if brNews %}
 	{% include 'partials/breaking-news.html.twig' with { 'article': item.content } %}
 	<div class="row">
-		<div class="col-md-9 col-sm-12 col-xs-12">
+		<div class="col-12 col-lg-8">
 			<div class="row">
 				<div class="col-12">
 					{% else %}
 					<div class="row">
-						<div class="col-md-9 col-sm-12 col-xs-12">
+						<div class="col-12 col-lg-8">
 							<div class="row">
 								<div class="col-12">
 									{% include 'partials/mainArticle.html.twig' with { 'article': item.content } %}
@@ -144,7 +144,7 @@
 								</div>
 							</div>
 
-							<div class="col-xs-12 col-sm-12 col-md-3">
+							<div class="col-12 col-lg-4">
 								<div class="col-12">
 									<div class="leftCol__item">
 										<div class="articleListSmall articleListSmall--latestNews marginBottom30">
