--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -30,7 +30,7 @@
   #}
   <a href="{{ url(article) }}">
       <p class="articleGrid__kicker">
-      {{ article.featureMedia.body|striptags|upper|safeTruncate(160,"...") }}
+      {{ article.lead|striptags|upper|safeTruncate(160,"...") }}
       </p>
       <h3 class="articleGrid__headline">{{ article.title }}</h3>
   </a>
