--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -34,7 +34,7 @@
 											{% else %}
 											{% if (item.values.position == 9) or (item.values.position == 18) %}
 											<div class="col-12">
-											   {{ dump(article }}
+											   {{ dump(article) }}
 												{% include 'partials/mainArticle.html.twig' with { 'article' : item.content } %}
 											</div>
 											{% endif %}
