--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -24,7 +24,7 @@
 							<div class="row">
 								<div class="col-12">
 									{% include 'partials/mainArticle.html.twig' with { 'article': item.content } %}
-									{{ dump(article }}
+									{{ dump(item) }}
 									<div class="articleGrid row">
 										{% endif %}
 										{% else %}
@@ -34,7 +34,7 @@
 											{% else %}
 											{% if (item.values.position == 9) or (item.values.position == 18) %}
 											<div class="col-12">
-											   {{ dump(article) }}
+											   {{ dump(item) }}
 												{% include 'partials/mainArticle.html.twig' with { 'article' : item.content } %}
 											</div>
 											{% endif %}
