--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -57,8 +57,9 @@
     text-transform: uppercase
     margin: 12px 0;
     text-shadow: 1px 1px 1px #000;
-    a
-      color: #fff;
+    @media only screen and (min-width: 768px)
+      a
+        color: #fff;
     &:hover
       color: $colorGrey
     &--small
