--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -1,4 +1,5 @@
 .mainArticle
+  font-family: source sans pro,sans-serif
   position: relative
   margin-bottom: 20px
   border-bottom: 1px dotted #cccccc
@@ -55,7 +56,6 @@
     @include letterSpacing()
     font-size: 3.9rem
     font-weight: 700
-    text-transform: uppercase
     margin: 12px 0;
     text-shadow: 1px 1px 1px #000;
     &:hover
