--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -146,9 +146,9 @@
     </div>
   </div>
 
- <header class="header my-1">
+ <header class="header my-0">
 
-    <div class="container mb-5">
+    <div class="container my-0">
 
       <div class="d-flex justify-content-between">
 
@@ -203,7 +203,7 @@
         {% endgimmelist %}
 
 {% if i > 0 %}
-  <div class="trendingTopics">
+  <div class="trendingTopics my-0">
     <div class="container">
       <div class="okayNav-header">
         <nav role="navigation" id="topics" class="okayNav">
