--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -190,5 +190,11 @@
 								{% endcontainer %}
 							</div>
 						</div>
+
+	<div class="row">
+		<div class="col-12">
+		
+		</div>
+	</div>
 </main>
 {% endblock %}
