--- a/public/css/elements/_default.sass
+++ b/public/css/elements/_default.sass
@@ -23,6 +23,10 @@ body
   color: $colorDark
   padding-top: 0px
   overflow: auto !important
+  background: #DAE2F8;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #D6A4A4, #DAE2F8);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #D6A4A4, #DAE2F8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 h1,h2,h3,h4,h5,h6
   font-family: $fontRegular
