--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -52,6 +52,7 @@
 										{% endcache %}
 									</div>
 								</div>
+
 								<div class="col-12 col-lg-4">
 									<div class="col-12">
 										<div class="leftCol__item">
@@ -101,6 +102,7 @@
 								</div>
 							</div>
 						</div>
+						</div>
 						<div class="row">
 							<div class="col-12">
 								<div class="row">
@@ -136,7 +138,7 @@
 									</div>
 								</div>
 
-								
+
 								<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a
